Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6, 10.11, 10.4(EOL), 10.5(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL)
-
None
Description
origin/bb-10.6-release 6d3e8a1cbdd18e63b0bec27b7986d261ca5af37b 2023-02-02T18:19:36+02:00
|
 |
CREATE TABLE t1 (
|
col1 INT PRIMARY KEY,
|
col_text TEXT,
|
col_text_g TEXT GENERATED ALWAYS AS (SUBSTR(col_text,1,499))
|
) ENGINE = InnoDB ROW_FORMAT = Compact;
|
INSERT INTO t1 (col1) VALUES (1) ;
|
DELETE FROM t1 WHERE col1 = 1;
|
ALTER TABLE t1 ADD UNIQUE INDEX (col_text_g(9));
|
BEGIN;
|
INSERT INTO t1 (col1) VALUES (1);
|
ROLLBACK;
|
harvests
|
mariadbd: /data/Server/bb-10.6-releaseC/storage/innobase/row/row0row.cc:274: dtuple_t* row_build_index_entry_low(const dtuple_t*, const row_ext_t*, const dict_index_t*, mem_heap_t*, ulint): Assertion `flag == 1' failed.
|
(rr) bt
|
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
#1 0x00007f20cd540859 in __GI_abort () at abort.c:79
|
#2 0x00007f20cd540729 in __assert_fail_base (fmt=0x7f20cd6d6588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x561c9acc7aa0 "flag == 1",
|
file=0x561c9acc8348 "/data/Server/bb-10.6-releaseC/storage/innobase/row/row0row.cc", line=274, function=<optimized out>) at assert.c:92
|
#3 0x00007f20cd551f36 in __GI___assert_fail (assertion=assertion@entry=0x561c9acc7aa0 "flag == 1", file=file@entry=0x561c9acc8348 "/data/Server/bb-10.6-releaseC/storage/innobase/row/row0row.cc",
|
line=line@entry=274, function=function@entry=0x561c9acc7860 "dtuple_t* row_build_index_entry_low(const dtuple_t*, const row_ext_t*, const dict_index_t*, mem_heap_t*, ulint)") at assert.c:101
|
#4 0x0000561c99d2a6a0 in row_build_index_entry_low (row=row@entry=0x6190000bb108, ext=ext@entry=0x0, index=index@entry=0x616000961008, heap=heap@entry=0x6190000bae80, flag=flag@entry=0)
|
at /data/Server/bb-10.6-releaseC/storage/innobase/row/row0row.cc:274
|
#5 0x0000561c99da9dd3 in row_build_index_entry (heap=0x6190000bae80, index=0x616000961008, ext=0x0, row=0x6190000bb108) at /data/Server/bb-10.6-releaseC/storage/innobase/include/row0row.inl:126
|
#6 row_vers_old_has_index_entry (also_curr=also_curr@entry=false, rec=<optimized out>, mtr=mtr@entry=0x7f20c1e960c0, index=index@entry=0x616000961008, ientry=ientry@entry=0x6190000b9b08,
|
roll_ptr=roll_ptr@entry=0, trx_id=<optimized out>) at /data/Server/bb-10.6-releaseC/storage/innobase/row/row0vers.cc:1087
|
#7 0x0000561c9a248df7 in row_undo_mod_del_mark_or_remove_sec_low (node=node@entry=0x61a000056b08, thr=thr@entry=0x6160009742c0, index=index@entry=0x616000961008, entry=entry@entry=0x6190000b9b08,
|
mode=<optimized out>, mode@entry=BTR_MODIFY_LEAF) at /data/Server/bb-10.6-releaseC/storage/innobase/include/btr0pcur.h:413
|
#8 0x0000561c9a2499f9 in row_undo_mod_del_mark_or_remove_sec (node=node@entry=0x61a000056b08, thr=thr@entry=0x6160009742c0, index=index@entry=0x616000961008, entry=entry@entry=0x6190000b9b08)
|
at /data/Server/bb-10.6-releaseC/storage/innobase/row/row0umod.cc:631
|
#9 0x0000561c9a24afc0 in row_undo_mod_upd_del_sec (node=node@entry=0x61a000056b08, thr=thr@entry=0x6160009742c0) at /data/Server/bb-10.6-releaseC/storage/innobase/row/row0umod.cc:875
|
#10 0x0000561c9a24bf84 in row_undo_mod (node=node@entry=0x61a000056b08, thr=thr@entry=0x6160009742c0) at /data/Server/bb-10.6-releaseC/storage/innobase/row/row0umod.cc:1241
|
#11 0x0000561c99d6c0f7 in row_undo (node=node@entry=0x61a000056b08, thr=thr@entry=0x6160009742c0) at /data/Server/bb-10.6-releaseC/storage/innobase/row/row0undo.cc:405
|
#12 0x0000561c99d7137e in row_undo_step (thr=thr@entry=0x6160009742c0) at /data/Server/bb-10.6-releaseC/storage/innobase/row/row0undo.cc:452
|
#13 0x0000561c99bd19cd in que_thr_step (thr=0x6160009742c0) at /data/Server/bb-10.6-releaseC/storage/innobase/que/que0que.cc:595
|
#14 que_run_threads_low (thr=thr@entry=0x6160009742c0) at /data/Server/bb-10.6-releaseC/storage/innobase/que/que0que.cc:653
|
#15 0x0000561c99bd1d4b in que_run_threads (thr=0x6160009742c0) at /data/Server/bb-10.6-releaseC/storage/innobase/que/que0que.cc:673
|
#16 0x0000561c99e31837 in trx_t::rollback_low (this=this@entry=0x7f20c9831340, savept=savept@entry=0x0) at /data/Server/bb-10.6-releaseC/storage/innobase/trx/trx0roll.cc:125
|
#17 0x0000561c99e2bf3b in trx_rollback_for_mysql_low (trx=trx@entry=0x7f20c9831340) at /data/Server/bb-10.6-releaseC/storage/innobase/trx/trx0roll.cc:196
|
#18 0x0000561c99e2c4f5 in trx_rollback_for_mysql (trx=trx@entry=0x7f20c9831340) at /data/Server/bb-10.6-releaseC/storage/innobase/trx/trx0roll.cc:231
|
#19 0x0000561c998b27bf in innobase_rollback (hton=<optimized out>, thd=0x62b0000af218, rollback_trx=<optimized out>) at /data/Server/bb-10.6-releaseC/storage/innobase/handler/ha_innodb.cc:4696
|
#20 0x0000561c98ef5233 in ha_rollback_trans (thd=thd@entry=0x62b0000af218, all=all@entry=true) at /data/Server/bb-10.6-releaseC/sql/handler.cc:2199
|
#21 0x0000561c98aed479 in trans_rollback (thd=thd@entry=0x62b0000af218) at /data/Server/bb-10.6-releaseC/sql/transaction.cc:372
|
#22 0x0000561c98688cfe in mysql_execute_command (thd=thd@entry=0x62b0000af218, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /data/Server/bb-10.6-releaseC/sql/sql_parse.cc:5662
|
#23 0x0000561c98641720 in mysql_parse (thd=thd@entry=0x62b0000af218, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x7f20c1e98130)
|
at /data/Server/bb-10.6-releaseC/sql/sql_parse.cc:8021
|
#24 0x0000561c986700bf in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x62b0000af218, packet=packet@entry=0x629000258219 "ROLLBACK", packet_length=packet_length@entry=8,
|
blocking=blocking@entry=true) at /data/Server/bb-10.6-releaseC/sql/sql_class.h:1385
|
#25 0x0000561c98676da6 in do_command (thd=0x62b0000af218, blocking=blocking@entry=true) at /data/Server/bb-10.6-releaseC/sql/sql_parse.cc:1409
|
#26 0x0000561c98aae281 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x608000002338, put_in_cache=put_in_cache@entry=true) at /data/Server/bb-10.6-releaseC/sql/sql_connect.cc:1416
|
#27 0x0000561c98aaedca in handle_one_connection (arg=0x608000002338) at /data/Server/bb-10.6-releaseC/sql/sql_connect.cc:1318
|
#28 0x00007f20cda68609 in start_thread (arg=<optimized out>) at pthread_create.c:477
|
#29 0x00007f20cd63d293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
(rr)
|
|