MDEV-30597      Assertion `flag == 1' failed in row_build_index_entry_low

- InnoDB tries to build the previous version of the record for
the virtual index, but the undo log record doesn't contain
virtual column information. This leads to assert failure while
building the tuple.